added font awesome gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
 
 //Typography Styles
 h1, h2, h3 {
@@ -45,7 +47,7 @@ h1, h2, h3 {
 }
 
 
-
+//Homepage Styles
 .home-callout {
     
     color: white;
