--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-brailsar"></span>
       </button>
       <%= link_to root_path, class: "navbar-brand" do %>
         <i class="fa fa-group"></i>
@@ -25,6 +25,7 @@
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contact Us", new_contact_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
